# Bilevel-Autoresearch

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPTIMIZATION_LOG.md  README.md  cli.py  discussion_update.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
article_optimizer/: README.md  cli.py  test_outer_model.py  test_outer_model_results.json
article_optimizer/articles/: README.md  article15_meta_optimization.md  article1_llm_research_depth.md
article_optimizer/config/: default.yaml
article_optimizer/examples/: outer_cycle_01_best_article2.md  outer_cycle_01_summary.json  outer_cycle_01_trace_article2.json  outer_cycle_02_best_article2.md  outer_cycle_02_summary.json  (+2 more)
articles/: README.md  article15_meta_optimization.md  article1_llm_research_depth.md  article2_agent_team_scale.md
config/: default.yaml
core/: base_mechanism_research.py  inner_loop.py  llm_client.py  mechanism_research.py  outer_loop.py  runner.py  state.py
docs/: discussion_karpathy_autoresearch.md  quality_definitions.md  reference_frameworks.md
domains/: README.md
examples/: example_literature_scan.md  example_run_review.md  outer_cycle_03_summary.json  outer_cycle_03_trace_article2.json  outer_cycle_04_best_article2.md  outer_cycle_04_summary.json  outer_cycle_04_trace_article2.json
experiments/: README.md
legacy/: README.md  test_outer_model.py  test_outer_model_results.json
skills/: research-evo.md
src/: inner_loop.py  llm_client.py  mechanism_research.py  outer_loop.py  runner.py  state.py
tests/: test_inner_loop.py  test_llm_client.py  test_mechanism_research.py  test_memory_store.py  test_pipeline.py  test_promote_skills.py  test_runner.py  test_state.py  test_train_opt.py
(+201 files in other folders)
