[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "research-evo"
version = "0.2.0"
requires-python = ">=3.10"
description = "A self-improving AI research pipeline with evolutionary memory"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["llm", "ai", "research", "agents", "pipeline", "evolution"]
dependencies = [
    "openai>=1.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=8.0", "ruff>=0.3.0"]

[project.scripts]
research-evo = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E741"]  # E501: line length, E741: ambiguous var names (l/O/I)
