[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bilevel-autoresearch"
version = "0.3.0"
requires-python = ">=3.10"
description = "A dual-layer self-improving article optimizer (Bilevel Autoresearch)"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["llm", "ai", "research", "bilevel-optimization", "agents", "pipeline"]
dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
dev = ["pytest>=8.0", "ruff>=0.3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E741"]  # E501: line length, E741: ambiguous var names (l/O/I)
